# unicode-display-width

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  ENHANCEMENT_REQUEST.md
.github/workflows/: rust.yml
benches/: bench.rs
docs/: alternatives.md  editor_choice.md  fonts.md  glyph_code_point_discrepancies.md  hex_range_generation.md  history.md  text_rendering.md  unicode_background.md
generate_ranges/: code_point_ranges.rs  gen.py  template.rs
src/: code_point_ranges.rs  lib.rs
