[package]
name = "unicode-display-width"
version = "0.4.0"
authors = ["James Lanska <65431054+jameslanska@users.noreply.github.com>"]
edition = "2024"
description = "Unicode 16.0.0 compliant utility for determining the number of columns required to display an arbitrary string"
keywords = ["Unicode", "wcwidth", "wcswidth", "width", "east-asian-width"]
repository = "https://github.com/jameslanska/unicode-display-width/"
license = "MIT"
readme = "README.md"
categories = ["text-processing", "text-editors"]
exclude = [".github/", "docs/", ".vscode/", "generate_ranges/"]

[dependencies]
unicode-segmentation = "1.12.0"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
test-case = "3.3.1"

[[bench]]
name = "bench"
harness = false
